fix static file

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,9 @@
 [uwsgi]
 socket = $(OPENSHIFT_DIY_IP):$(OPENSHIFT_DIY_PORT)
 socket-protocol = http
-pp = $(OPENSHIFT_REPO_DIR)diy
-w = application:application
+virtualenv = $(OPENSHIFT_DEPENDENCIES_DIR)python
+pythonpath = $(OPENSHIFT_REPO_DIR)diy
+module = main:app
 daemonize = $(OPENSHIFT_DIY_LOG_DIR)python.log
 pidfile = $(OPENSHIFT_TMP_DIR)uwsgi.pid
 static-map = /static=$(OPENSHIFT_REPO_DIR)diy/static
@@ -10,6 +11,7 @@ static-map = /favicon.ico=$(OPENSHIFT_REPO_DIR)diy/static/favicon.ico
 static-map = /robots.txt=$(OPENSHIFT_REPO_DIR)diy/static/robots.txt
 static-map = /glass=$(OPENSHIFT_REPO_DIR)diy/static/glass
 static-map = /senc=$(OPENSHIFT_REPO_DIR)diy/static/senc
+static-index = index.html
 die-on-term = 1
 master = 1
 cheaper-algo = spare
