--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -14,6 +14,7 @@ static-map = /senc=$(OPENSHIFT_REPO_DIR)diy/static/senc
 static-index = index.html
 die-on-term = 1
 master = 1
+log-x-forwarded-for = 1
 cheaper-algo = spare
 cheaper = 1
 cheaper-initial = 1
