new style; use msgpack

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -22,3 +22,4 @@ workers = 3
 cheaper-step = 1
 harakiri = 120
 max-worker-lifetime = 43200
+logformat = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)"
