--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,4 +1,6 @@
 #!/bin/bash
 source ${OPENSHIFT_DEPENDENCIES_DIR}python/bin/activate
 pip3 install --use-mirrors -r ${OPENSHIFT_REPO_DIR}requirements.txt
-python3 ${OPENSHIFT_REPO_DIR}diy/csscompressor.py ${OPENSHIFT_REPO_DIR}diy/static/*_.css > ${OPENSHIFT_REPO_DIR}diy/static/style.css
+for css in ${OPENSHIFT_REPO_DIR}diy/static/*_.css; do
+ python3 ${OPENSHIFT_REPO_DIR}diy/csscompressor.py ${css} > ${css::-5}.m.css
+done
