uwsgi stuff update

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -12,6 +12,9 @@ static-map = /robots.txt=$(OPENSHIFT_REPO_DIR)diy/static/robots.txt
 static-map = /glass=$(OPENSHIFT_REPO_DIR)diy/static/glass
 static-map = /senc=$(OPENSHIFT_REPO_DIR)diy/static/senc
 static-index = index.html
+static-skip-ext = .py
+static-cache-paths = 30
+offload-threads = 2
 die-on-term = 1
 master = 1
 log-x-forwarded-for = 1
@@ -20,6 +23,6 @@ cheaper = 1
 cheaper-initial = 1
 workers = 3
 cheaper-step = 1
-harakiri = 120
+harakiri = 150
 max-worker-lifetime = 43200
 logformat = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)"
