use uwsgi to send file

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -10,8 +10,10 @@ cache2 = name=uwcache,items=10
 static-map = /static=$(OPENSHIFT_REPO_DIR)diy/static
 static-map = /favicon.ico=$(OPENSHIFT_REPO_DIR)diy/static/favicon.ico
 static-map = /robots.txt=$(OPENSHIFT_REPO_DIR)diy/static/robots.txt
+static-map = /humans.txt=$(OPENSHIFT_REPO_DIR)diy/static/humans.txt
 static-map = /glass=$(OPENSHIFT_REPO_DIR)diy/static/glass
 static-map = /senc=$(OPENSHIFT_REPO_DIR)diy/static/senc
+static-map = /buka/bukadownloader.zip=$(OPENSHIFT_DATA_DIR)bukadownloader.zip
 static-index = index.html
 static-skip-ext = .py
 static-cache-paths = 30
