--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,7 +5,7 @@ virtualenv = $(OPENSHIFT_DEPENDENCIES_DIR)python
 pythonpath = $(OPENSHIFT_REPO_DIR)diy
 module = main:app
 daemonize = $(OPENSHIFT_DIY_LOG_DIR)python.log
-pidfile = $(OPENSHIFT_REPO_DIR)uwsgi.pid
+pidfile = $(OPENSHIFT_DATA_DIR)uwsgi.pid
 cache2 = name=uwcache,items=32
 static-map = /static=$(OPENSHIFT_REPO_DIR)diy/static
 static-map = /favicon.ico=$(OPENSHIFT_REPO_DIR)diy/static/favicon.ico
